--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ aiogram==2.25.1
 python-dotenv==0.19.2
 aiohttp==3.8.4
 Pillow==9.5.0
-replicate==0.11.0
+stability-sdk==0.8.0
 SQLAlchemy==1.4.41
 psycopg2-binary==2.9.5
