--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "telegram-clothoff-bot",
-    "version": "1.0.0",
-    "description": "Telegram bot for image processing",
-    "main": "dist/index.js",
-    "scripts": {
-      "start": "node dist/index.js",
-      "build": "tsc",
-      "dev": "ts-node src/index.ts"
-    },
-    "dependencies": {
-      "telegraf": "^4.12.2",
-      "axios": "^1.6.2",
-      "@railway/postgress": "^1.0.0",
-      "dotenv": "^16.3.1"
-    },
-    "devDependencies": {
-      "typescript": "^5.0.0",
-      "@types/node": "^18.0.0",
-      "ts-node": "^10.9.1"
-    },
-    "engines": {
-      "node": ">=16.0.0"
-    }
+  "name": "telegram-clothoff-bot",
+  "version": "1.0.0",
+  "description": "Telegram bot for image processing",
+  "main": "dist/index.js",
+  "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "ts-node src/index.ts"
+  },
+  "dependencies": {
+    "telegraf": "4.12.2",
+    "axios": "1.6.2",
+    "pg": "8.11.3",
+    "dotenv": "16.3.1"
+  },
+  "devDependencies": {
+    "typescript": "5.0.4",
+    "@types/node": "18.15.11",
+    "@types/pg": "8.10.9",
+    "ts-node": "10.9.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
+}
