--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
   "name": "telegram-clothoff-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for image processing",
+  "description": "Telegram bot for image processing with ClothOff API",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "watch": "tsc -w",
+    "clean": "rimraf dist",
+    "lint": "eslint . --ext .ts",
+    "prebuild": "npm run clean"
   },
   "dependencies": {
     "telegraf": "4.12.2",
     "axios": "1.6.2",
     "pg": "8.11.3",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "form-data": "4.0.0"
   },
   "devDependencies": {
     "typescript": "5.0.4",
     "@types/node": "18.15.11",
     "@types/pg": "8.10.9",
-    "ts-node": "10.9.1"
+    "@types/form-data": "2.5.0",
+    "ts-node": "10.9.1",
+    "rimraf": "5.0.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
+    "eslint": "8.38.0"
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "your-repository-url"
+  },
+  "keywords": [
+    "telegram",
+    "bot",
+    "image-processing",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
