--- a/package.json
+++ b/package.json
@@ -7,42 +7,22 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "watch": "tsc -w",
-    "clean": "rimraf dist",
-    "lint": "eslint . --ext .ts",
-    "prebuild": "npm run clean"
+    "clean": "rm -rf dist"
   },
   "dependencies": {
-    "telegraf": "4.12.2",
+    "telegraf": "4.15.3",
     "axios": "1.6.2",
     "pg": "8.11.3",
     "dotenv": "16.3.1",
     "form-data": "4.0.0"
   },
   "devDependencies": {
-    "typescript": "5.0.4",
-    "@types/node": "18.15.11",
+    "typescript": "5.3.3",
+    "@types/node": "20.10.4",
     "@types/pg": "8.10.9",
-    "@types/form-data": "2.5.0",
-    "ts-node": "10.9.1",
-    "rimraf": "5.0.0",
-    "@typescript-eslint/eslint-plugin": "5.59.0",
-    "@typescript-eslint/parser": "5.59.0",
-    "eslint": "8.38.0"
+    "ts-node": "10.9.1"
   },
   "engines": {
     "node": ">=16.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "your-repository-url"
-  },
-  "keywords": [
-    "telegram",
-    "bot",
-    "image-processing",
-    "typescript"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+  }
 }
