--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "telegram-clothoff-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for image processing with ClothOff API",
+  "description": "Telegram bot for image processing",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "clean": "rm -rf dist"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "telegraf": "4.15.3",
     "axios": "1.6.2",
     "pg": "8.11.3",
     "dotenv": "16.3.1",
-    "form-data": "4.0.0"
+    "form-data": "4.0.0",
+    "express": "4.18.2"
   },
   "devDependencies": {
     "typescript": "5.3.3",
     "@types/node": "20.10.4",
     "@types/pg": "8.10.9",
+    "@types/express": "4.17.21",
     "ts-node": "10.9.1"
   },
   "engines": {
