--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "telegraf": "4.15.3",
@@ -23,7 +24,8 @@
     "@types/pg": "8.10.9",
     "@types/express": "4.17.21",
     "@types/multer": "1.4.7",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "rimraf": "5.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
