--- a/package.json
+++ b/package.json
@@ -10,24 +10,21 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "telegraf": "4.15.3",
-    "axios": "1.6.2",
-    "pg": "8.11.3",
-    "dotenv": "16.3.1",
-    "form-data": "4.0.0",
-    "express": "4.18.2",
-    "multer": "1.4.5-lts.1"
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "telegraf": "^4.15.3"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
-    "@types/node": "20.10.4",
-    "@types/pg": "8.10.9",
-    "@types/express": "4.17.21",
-    "@types/multer": "1.4.7",
-    "ts-node": "10.9.1",
-    "rimraf": "5.0.0"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.10.4",
+    "@types/pg": "^8.10.9",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   }
 }
