--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "16.3.1",
     "form-data": "4.0.0",
     "express": "4.18.2",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "node-schedule": "2.1.1"
   },
   "devDependencies": {
     "typescript": "5.3.3",
@@ -24,6 +25,7 @@
     "@types/pg": "8.10.9",
     "@types/express": "4.17.21",
     "@types/multer": "1.4.7",
+    "@types/node-schedule": "2.1.0",
     "ts-node": "10.9.1",
     "rimraf": "5.0.0"
   },
