--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "helmet": "7.1.0",
     "cors": "2.8.5",
     "crypto": "1.0.1",
-    "file-type": "16.5.4"
+    "file-type": "^18.7.0",
+    "@types/file-type": "^10.9.1"
   },
   "devDependencies": {
     "typescript": "5.3.3",
@@ -35,7 +36,6 @@
     "@types/multer": "1.4.7",
     "@types/node-schedule": "2.1.0",
     "@types/cors": "2.8.17",
-    "@types/file-type": "10.9.1",
     "ts-node": "10.9.1",
     "rimraf": "5.0.0",
     "eslint": "8.55.0",
@@ -45,5 +45,6 @@
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "type": "module"
 }
