--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "express-rate-limit": "7.1.5",
     "helmet": "7.1.0",
     "cors": "2.8.5",
-    "crypto": "1.0.1",
-    "file-type": "^18.7.0",
-    "@types/file-type": "^10.9.1"
+    "crypto": "1.0.1"
   },
   "devDependencies": {
     "typescript": "5.3.3",
@@ -45,6 +43,5 @@
   },
   "engines": {
     "node": ">=16.0.0"
-  },
-  "type": "module"
+  }
 }
