--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "clean": "rimraf dist",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "telegraf": "4.15.3",
@@ -18,13 +16,7 @@
     "dotenv": "16.3.1",
     "form-data": "4.0.0",
     "express": "4.18.2",
-    "multer": "1.4.5-lts.1",
-    "node-schedule": "2.1.1",
-    "winston": "3.11.0",
-    "express-rate-limit": "7.1.5",
-    "helmet": "7.1.0",
-    "cors": "2.8.5",
-    "crypto": "1.0.1"
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "typescript": "5.3.3",
@@ -32,14 +24,8 @@
     "@types/pg": "8.10.9",
     "@types/express": "4.17.21",
     "@types/multer": "1.4.7",
-    "@types/node-schedule": "2.1.0",
-    "@types/cors": "2.8.17",
     "ts-node": "10.9.1",
-    "rimraf": "5.0.0",
-    "eslint": "8.55.0",
-    "prettier": "3.1.0",
-    "@typescript-eslint/parser": "6.13.2",
-    "@typescript-eslint/eslint-plugin": "6.13.2"
+    "rimraf": "5.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
